--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,7 +2,6 @@ body {
     background-color: black!important;
     color: black;
     font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
 }
 
 h1 {
@@ -11,4 +10,8 @@ h1 {
     font-size: 50px;
     font-weight: 700;
     color: #e9e9e9;
+}
+
+th {
+    text-align: center;
 }
